[tool.poetry]
name = "aragon_d5_gas_analytics"
version = "0.1.0"
description = ""
authors = ["Akshay <araa@connect.ust.hk>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.1.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
